--- a/views/estate_menus.xml
+++ b/views/estate_menus.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <menuitem id="estate_property_menu_root" name="Estate Property" action="test_model_action">
-            <menuitem id="menu_property_type" name="Aplicação">
-                <menuitem id="aplicacao_menu" name="Ação">
-                    <menuitem id="action_property_type" action="model_action" name="Estate Property Type" />
-                        <menuitem id="action_tag" name="Estate Property Tag" action="tag_model_action"/>
-                            <menuitem id="estate_property_offer_menu_root" name="Estate Property Offer" action="offer_model_action"/>
-                </menuitem>
+    <menuitem id="estate_property_menu_root" name="Estate Property" action="property_model_action">
+        <menuitem id="menu_property_type" name="Aplicação">
+            <menuitem id="aplicacao_menu" name="Ação">
+                <menuitem id="action_property_type" action="model_action" name="Estate Property Type" />
+                <menuitem id="action_tag" name="Estate Property Tag" action="tag_model_action" />
+                <menuitem id="estate_property_offer_menu_root" name="Estate Property Offer" action="offer_model_action" />
             </menuitem>
+        </menuitem>
     </menuitem>
+
 </odoo>
