--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>      
-    <record id="test_model_action" model="ir.actions.act_window">
+    <record id="property_model_action" model="ir.actions.act_window">
         <field name="name">Imóvel</field>
         <field name="res_model">estate.property</field>
         <field name="view_mode">tree,form</field>
