--- a/views/property_offer_views.xml
+++ b/views/property_offer_views.xml
@@ -30,6 +30,8 @@
                         <field name="state"/>
                         <field name="partner_id"/>
                         <field name="property_id"/>
+                        <field name="validity"/>
+                        <field name="date_deadline"/>
                     </group>
             </sheet>
         </form>
