--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -1,75 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<odoo>      
-    <record id="test_model_action" model="ir.actions.act_window">
-        <field name="name">Imóvel</field>
-        <field name="res_model">estate.property</field>
-        <field name="view_mode">tree,form</field>
+<odoo>
+    <record id="estate_property_view_form" model="ir.ui.view">
+        <field name="name">estate.property.form</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <form>
+                <header>
+                    <button name="action_sold" type="object" string="Sold" states="novo,oferta recebida" />
+                    <button name="action_sold" type="object" string="Sold" states="oferta aceita" class="oe_highlight" />
+                    <button name="action_cancel" type="object" string="Cancel" states="novo,oferta recebida,oferta aceita" />
+                    <field name="state" widget="statusbar" statusbar_visible="novo, oferta recebida, oferta aceita, vendido" />
+                </header>
+                <sheet>
+                    <div class="oe_title">
+                        <h1>
+                            <field name="name" />
+                        </h1>
+                        <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}" />
+                    </div>
+                    <group>
+                        <group>
+                            <field name="property_type_id" options="{'no_create': True, 'no_edit': True}" />
+                            <field name="postcode" />
+                            <field name="date_availability" />
+                        </group>
+                        <group>
+                            <field name="expected_price" />
+                            <field name="best_price" />
+                            <field name="selling_price" />
+                        </group>
+                    </group>
+                    <notebook>
+                        <page string="Descrição">
+                            <group>
+                                <group>
+                                    <field name="description" />
+                                    <field name="bedrooms" />
+                                    <field name="living_area" />
+                                    <field name="facades" />
+                                    <field name="garage" />
+                                    <field name="garden" />
+                                    <field name="garden_area" attrs="{'invisible': [('garden', '=', False)]}" />
+                                    <field name="garden_orientation" attrs="{'invisible': [('garden', '=', False)]}" />
+                                    <field name="total_area" />
+                                </group>
+                            </group>
+                        </page>
+                        <page string="Ofertas">
+                            <field name="offer_ids" attrs="{'readonly': [('state', 'in', ('offer_accepted', 'sold', 'canceled'))]}" />
+                        </page>
+                        <page string="Outras Informações">
+                            <group>
+                                <group>
+                                    <field name="user_id" />
+                                    <field name="buyer_id" />
+                                </group>
+                            </group>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
     </record>
-    
-<record id="model_name_view_tree" model="ir.ui.view">
-    <field name="name">tree last seen</field>
-    <field name="model">estate.property</field>
-    <field name="arch" type="xml">
-        <tree string="estate property">
-        <field name="name"/>
-        <field name="last_seen"/>
-        </tree>
-    </field>
-</record>
 
-<record id="model_name_view_form" model="ir.ui.view">
-<field name="name">Form last seen</field>
-<field name="model">estate.property</field>
-<field name="arch" type="xml">
-<form string="Test">
-    <sheet>
-        <group>
-            <group>
-                <field name="name"/>
-                <field name="postcode"/>
-                <field name="date_availability"/>
-                <field name="expected_price"/>
-                <field name="selling_price"/>
-                <field name="bedrooms"/>
-                <field name="living_area"/>
-                <field name="facades"/>
-                <field name="garage"/>
-            </group>
-            <group>
-                <field name="last_seen"/>
-                <field name="garden"/>
-                <field name="garden_area"/>
-               <field name="garden_orientation"/>
-                <field name="active"/>
-                <field name="property_type_id"/>
-                <field name="salesman_id"/>
-                <field name="buyer_id"/>
+    <record id="estate_property_view_tree" model="ir.ui.view">
+        <field name="name">estate.property.tree</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <tree string="Properties" decoration-success="state in ('offer_received', 'offer_accepted')" decoration-muted="state == 'sold'" decoration-bf="state == 'offer_accepted'">
+                <field name="name" />
+                <field name="property_type_id" />
+                <field name="postcode" />
+                <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}" />
+                <field name="bedrooms" />
+                <field name="living_area" />
+                <field name="expected_price" />
+                <field name="selling_price" />
+                <field name="date_availability" optional="hide" />
+                <field name="state" invisible="1" />
+            </tree>
+        </field>
+    </record>
+
+
+    <record id="estate_property_view_search" model="ir.ui.view">
+        <field name="name">estate.property.search</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="name" />
+                <field name="property_type_id" />
+                <field name="postcode" />
+                <field name="expected_price" />
+                <field name="bedrooms" />
+                <field name="living_area" filter_domain="[('living_area', '>=', self)]" />
+                <field name="facades" />
+                <field name="garage" />
+                <field name="garden" />
+                <filter string="Available" name="available" domain="[('state', 'in', ('new', 'offer_received'))]" />
+                <group expand="1" string="Group By">
+                    <filter string="Postcode" name='postcode' context="{'group_by':'postcode'}" />
+                </group>
+            </search>
+        </field>
+    </record>
+
+    <record id="estate_property_view_kanban" model="ir.ui.view">
+        <field name="name">estate.property.kanban</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by="property_type_id" records_draggable="0">
                 <field name="state"/>
-                <field name="total_area"/>
-                <field name="tag_ids"/> 
-                <field name="offer_ids"/>
-                <field name="best_price"/>
-            </group>
-            <notebook>
-                <page string="Description">
-                    <field name="description"/>
-                </page>
-            </notebook>
-        </group>
-    </sheet>
-</form>
-</field>
-</record>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_kanban_global_click">
+                            <div>
+                                <strong class="o_kanban_record_title">
+                                    <field name="name"/>
+                                </strong>
+                            </div>
+                            <div>
+                                Preço esperado: <field name="expected_price"/>
+                            </div>
+                            <div t-if="record.state.raw_value == 'offer_received'">
+                                Best Offer: <field name="best_price"/>
+                            </div>
+                            <div t-if="record.selling_price.raw_value">
+                                Preço de venda: <field name="selling_price"/>
+                            </div>
+                            <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
 
-<record id="model_name_view_search" model="ir.ui.view">
-    <field name="name">model_name.view.search</field>
-    <field name="model">estate.property</field>
-    <field name="arch" type="xml">
-        <search string="Tests">
-        <filter name="filtro_ofertas" string="Postcode" domain="['|',('state', '=', 'Oferta recebida'),('state', '=', 'Novo')]" context="{'group_by': 'postcode'}" />
-            <field name="name"/>
-            <field name="last_seen"/>
-        </search>
-    </field>
-</record>
+    <record id="estate_property_action" model="ir.actions.act_window">
+        <field name="name">Propriedades</field>
+        <field name="res_model">estate.property</field>
+        <field name="view_mode">tree,kanban,form</field>
+        <field name="context">{'search_default_available': 1}</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                Crie uma propaganda de imóvel.
+            </p>
+            <p>
+                Crie imóveis e acompanhe o processo de venda.
+            </p>
+        </field>
+    </record>
 </odoo>
