--- a/views/property_offer_views.xml
+++ b/views/property_offer_views.xml
@@ -1,48 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<odoo>      
-    <record id="offer_model_action" model="ir.actions.act_window">
-        <field name="name">Offers</field>
-        <field name="res_model">estate.property.offer</field>
-        <field name="view_mode">tree,form</field>
-    </record>
+<odoo>
 
-    <record id="offer_view_tree" model="ir.ui.view">
-        <field name="name">tree price</field>
+    <record id="estate_property_offer_view_form" model="ir.ui.view">
+        <field name="name">estate.property.offer.form</field>
         <field name="model">estate.property.offer</field>
         <field name="arch" type="xml">
-            <tree string="estate property">
+            <form string="Ofertas de Propriedades">
+                <group>
+                    <field name="price"/>
+                    <field name="partner_id"/>
+                </group>
+            </form>
+        </field>
+    </record>
+
+    <record id="estate_property_offer_view_tree" model="ir.ui.view">
+        <field name="name">estate.property.offer.tree</field>
+        <field name="model">estate.property.offer</field>
+        <field name="arch" type="xml">
+            <tree string="Ofertas de Propriedades" editable="bottom" decoration-success="state == 'accepted'" decoration-danger="state == 'refused'">
                 <field name="price"/>
-                <field name="state"/>
                 <field name="partner_id"/>
-                <field name="property_id"/>
+                <field name="validity"/>
+                <field name="date_deadline"/>
+                <button name="action_aceitar" type="object" title="Accept" icon="fa-check" attrs="{'invisible': [('state', '!=', False)]}"/>
+                <button name="action_recusar" type="object" title="Refuse" icon="fa-times" attrs="{'invisible': [('state', '!=', False)]}"/>
+                <field name="state" invisible="1"/>
             </tree>
         </field>
     </record>
 
-    <record id="offer_view_form" model="ir.ui.view">
-        <field name="name">Form price</field>
-        <field name="model">estate.property.offer</field>
-        <field name="arch" type="xml">
-        <form string="Test">
-            <sheet>
-                    <group>
-                        <field name="price"/>
-                        <field name="state"/>
-                        <field name="partner_id"/>
-                        <field name="property_id"/>
-                    </group>
-            </sheet>
-        </form>
-        </field>
-        </record>
+    <record id="estate_property_offer_action" model="ir.actions.act_window">
+        <field name="name">Ofertas de Propriedades</field>
+        <field name="res_model">estate.property.offer</field>
+        <field name="domain">[('property_type_id','=', active_id)]</field>
+        <field name="view_mode">tree,form</field>
+    </record>
 
-        <record id="offer_view_search" model="ir.ui.view">
-            <field name="name">offer_name.view.search</field>
-            <field name="model">estate.property.offer</field>
-            <field name="arch" type="xml">
-                <search string="Tests">
-                    <field name="price"/>
-                </search>
-            </field>
-        </record>    
 </odoo>
