--- a/views/property_tag_views.xml
+++ b/views/property_tag_views.xml
@@ -1,43 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<odoo>      
-    <record id="tag_model_action" model="ir.actions.act_window">
-        <field name="name">Tags</field>
-        <field name="res_model">estate.property.tag</field>
-        <field name="view_mode">tree,form</field>
-    </record>
-
-    <record id="tag_view_tree" model="ir.ui.view">
-        <field name="name">tree last seen</field>
+<odoo>
+    <record id="estate_property_tag_view_tree" model="ir.ui.view">
+        <field name="name">estate.property.tag.tree</field>
         <field name="model">estate.property.tag</field>
         <field name="arch" type="xml">
-            <tree string="estate property">
-            <field name="name"/>
+            <tree string="Tags" editable="bottom">
+                <field name="name"/>
             </tree>
         </field>
     </record>
 
-    <record id="tag_view_form" model="ir.ui.view">
-        <field name="name">Form last seen</field>
-        <field name="model">estate.property.tag</field>
-        <field name="arch" type="xml">
-        <form string="Test">
-            <sheet>
-                    <group>
-                        <field name="name"/>
-                    </group>
-            </sheet>
-        </form>
-        </field>
-        </record>
-
-        <record id="tag_view_search" model="ir.ui.view">
-            <field name="name">tag_name.view.search</field>
-            <field name="model">estate.property.tag</field>
-            <field name="arch" type="xml">
-                <search string="Tests">
-                    <field name="name"/>
-                </search>
-            </field>
-        </record>    
-
+    <record id="estate_property_tag_action" model="ir.actions.act_window">
+        <field name="name">Tags</field>
+        <field name="res_model">estate.property.tag</field>
+        <field name="view_mode">tree,form</field>
+    </record>
 </odoo>
