--- a/views/property_type_views.xml
+++ b/views/property_type_views.xml
@@ -1,42 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<odoo>      
-    <record id="model_action" model="ir.actions.act_window">
-        <field name="name">Tipo de Imóvel</field>
+<odoo>
+    <record id="estate_property_type_view_form" model="ir.ui.view">
+        <field name="name">estate.property.type.form</field>
+        <field name="model">estate.property.type</field>
+        <field name="arch" type="xml">
+            <form>
+                <sheet>
+                    <div class="oe_button_box" name="button_box">
+                        <button name="%(estate.estate_property_offer_action)d" type="action" class="oe_stat_button" icon="fa-money">
+                            <field name="offer_count" widget="statinfo" string="Ofertas"/>
+                        </button>
+                    </div>
+                    <div class="oe_title">
+                        <h1>
+                            <field name="name"/>
+                        </h1>
+                    </div>
+                    <notebook>
+                        <page string="Propriedades">
+                            <field name="property_ids" readonly="1">
+                                <tree>
+                                    <field name="name"/>
+                                    <field name="expected_price"/>
+                                    <field name="state"/>
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <record id="estate_property_type_view_tree" model="ir.ui.view">
+        <field name="name">estate.property.type.tree</field>
+        <field name="model">estate.property.type</field>
+        <field name="arch" type="xml">
+            <tree string="Tipos de Propriedades">
+                <field name="sequence" widget="handle"/>
+                <field name="name"/>
+            </tree>
+        </field>
+    </record>
+
+    <record id="estate_property_type_action" model="ir.actions.act_window">
+        <field name="name">Property Types</field>
         <field name="res_model">estate.property.type</field>
         <field name="view_mode">tree,form</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                Crie um tipo de propriedade
+            </p>
+        </field>
     </record>
-    
-<record id="name_view_tree" model="ir.ui.view">
-    <field name="name">tree last seen</field>
-    <field name="model">estate.property.type</field>
-    <field name="arch" type="xml">
-        <tree string="estate property">
-        <field name="name"/>
-        </tree>
-    </field>
-</record>
-
-<record id="name_view_form" model="ir.ui.view">
-<field name="name">Form last seen</field>
-<field name="model">estate.property.type</field>
-<field name="arch" type="xml">
-<form string="Test">
-    <sheet>
-            <group>
-                <field name="name"/>
-            </group>
-    </sheet>
-</form>
-</field>
-</record>
-
-<record id="name_view_search" model="ir.ui.view">
-    <field name="name">model_name.view.search</field>
-    <field name="model">estate.property.type</field>
-    <field name="arch" type="xml">
-        <search string="Tests">
-            <field name="name"/>
-        </search>
-    </field>
-</record>
 </odoo>
